--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,7 +11,7 @@
 @import "unikorn/unikorn";
 
 @import "mixins/gradients";
-@import "mixins/fluid-aspect";
+@import "mixins/picture";
 
 @import "components/basic";
 @import "components/buttons";
