--- a/src/scss/components/_parallax.scss
+++ b/src/scss/components/_parallax.scss
@@ -14,19 +14,26 @@
   overflow: hidden;
 }
 
-.parallax-img {
-  position: absolute;
-  top: 0;
-  left: 50%;
-  z-index: -1;
-  width: auto;
-  transform: translate(-50%, 0);
-  @media screen and (min-width: 992px) {
-    width: 100%;
+.parallax-picture {
+  position: relative;
+  display: block;
+  height: 100%;
+
+  .parallax-img {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    z-index: -1;
+    width: auto;
+    transform: translate(-50%, 0);
+
+    @media screen and (min-width: 1200px) {
+      width: 100%;
+    }
   }
 }
 
-.parallax-mask {
+.parallax-overlay {
   position: absolute;
   top: 0;
   left: 0;
