--- a/src/scss/mixins/_picture.scss
+++ b/src/scss/mixins/_picture.scss
@@ -2,6 +2,25 @@
 // Fluid aspect
 // -----------------------------------------------------------------------------
 
+@mixin top-fluid-aspect($ratio: 1 1, $selector: "> :first-child") {
+  $selector: unquote($selector);
+
+  // parent
+  position: relative;
+  display: block;
+  height: auto;
+  padding-bottom: percentage(nth($ratio, 2) / nth($ratio, 1));
+
+  // child
+  #{$selector} {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: auto;
+    transform: translate(-50%, -50%);
+  }
+}
+
 @mixin fluid-aspect($ratio: 1 1, $selector: "> :first-child") {
   $selector: unquote($selector);
 
