--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -20,6 +20,9 @@
 @import "components/header";
 @import "components/content";
 @import "components/cards";
+@import "components/features";
+@import "components/portfolio";
+@import "components/testimonials";
 @import "components/parallax";
 @import "components/tags";
 @import "components/tech";
