--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -11,4 +11,7 @@ block header
 
 prepend content
   include includes/sections/_cards
+  include includes/sections/_features
+  include includes/sections/_portfolio
+  include includes/sections/_testimonials
   include includes/sections/_technologies
