perf(fonts); update fontawesome to version 5.10.0

--- a/src/views/partials/_fonts.pug
+++ b/src/views/partials/_fonts.pug
@@ -23,7 +23,13 @@ script.
 //- else
 //-   link#fonts-style(rel="stylesheet" href="css/vendor/fonts.css" media="all")
 
+//- Font Awesome Free
+//- script(defer
+//-   src="https://kit.fontawesome.com/22a4aa9152.js"
+//-   integrity="sha384-jGY5YUE3BAHeHKYaJOm6ksflRGCV6iXphfg/zIy5vu/7enHEusQ6GPSmqBPfcn3O"
+//-   crossorigin="anonymous")
+
 script(defer
-  src="https://use.fontawesome.com/releases/v5.8.2/js/all.js"
-  integrity="sha384-DJ25uNYET2XCl5ZF++U8eNxPWqcKohUUBUpKGlNLMchM7q4Wjg2CUpjHLaL8yYPH"
+  src="https://use.fontawesome.com/releases/v5.10.0/js/all.js"
+  integrity="sha384-BfzGEucsDAHnSR99xBvG8cNHx7h6sEbKJejtvqlMrN8nMi3gP2ds+sMAjWfWnZyn"
   crossorigin="anonymous")
