refactor(parallax): small changes

--- a/src/views/includes/sections/_parallax.pug
+++ b/src/views/includes/sections/_parallax.pug
@@ -4,7 +4,7 @@ section.parallax#parallax
     picture.parallax-picture
       source(data-srcset="images/hero-unit/grass_field_dawn.webp" type="image/webp")
       source(data-srcset="images/hero-unit/grass_field_dawn.jpg" type="image/jpeg")
-      img.lazy-parallax.parallax-img#bg-parallax(
+      img.lazy-parallax.parallax-img(
         data-src="images/hero-unit/grass_field_dawn.jpg" data-speed=".6" alt="Good Morning")
     .parallax-overlay
       .container
