--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -27,5 +27,8 @@
 @import "components/tags";
 @import "components/tech";
 @import "components/footer";
+@import "components/newsletter";
 @import "components/modal";
+@import "components/form";
+@import "components/contact";
 @import "components/misc";
