--- a/src/views/modules/footer/_footer-call-to-action.pug
+++ b/src/views/modules/footer/_footer-call-to-action.pug
@@ -7,5 +7,5 @@
         | may have about our services. Reach out to us and we'll do our best to
         | find the right solution for you.
       //- Button trigger modal
-      button.btn.btn-outline-orange.btn-lg.mb-5.text-uppercase(
+      button.btn.btn-orange.btn-lg.mb-5.text-uppercase(
         type="button" data-toggle="modal" data-target="#GetQuoteModal") get in touch
