refactor(contact): update contact forms

--- a/src/views/includes/forms/_contact-form.pug
+++ b/src/views/includes/forms/_contact-form.pug
@@ -2,6 +2,10 @@
 // Contact form
 section.contact-form.text-center#scontact-form
   .container
+    .row
+      .col-12
+        h3.mb-4 Please, be so kind, don't hesitate to contact us!
+
     .row.no-gutters
       .col-8.offset-md-2
         form.form-horizontal#contact-form(action="#!" netlify)
