--- a/src/views/includes/forms/_newsletter.pug
+++ b/src/views/includes/forms/_newsletter.pug
@@ -1,7 +1,7 @@
-//- includes/sections/_newsletter.pug
+//- includes/forms/_newsletter.pug
 section.newsletter.text-center#newsletter
   h2.mb-4 Check our newsletter
-  form.form-inline(action="#!" netlify)
+  form.form-inline#news-form(action="#!" netlify)
     .input-group
       input.form-control#newsemail(type="email" name="newsemail" placeholder="your@email.here" aria-label="your@email.here")
       .input-group-append
