--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -72,7 +72,7 @@
   line-height: 1.5;
   text-align: center;
   outline: 0 !important; // stylelint-disable-line
-  box-shadow: 0 3px 10px rgba(0, 0, 0, .23), 0 3px 10px rgba(0, 0, 0, .16);//
+  box-shadow: 0 3px 10px rgba(0, 0, 0, .23), 0 3px 10px rgba(0, 0, 0, .16);
   transition: all 200ms ease;
   cursor: pointer;
 
