--- a/src/scss/components/_features.scss
+++ b/src/scss/components/_features.scss
@@ -9,7 +9,18 @@
   background-color: darken($grey-800, 7%);
 
   .card {
-    margin: 0 0 1.9rem;
-    border: none;
+    margin: 0 0 2rem;
+    border: 0 solid rgba(0, 0, 0, 0);
+    border-radius: 0;
+    box-shadow: 0 20px 30px rgba(0, 0, 0, .6);
+
+    .card-img {
+      padding: 1.25rem 0 0;
+      border-radius: 0;
+    }
+
+    @media (min-width: 768px) {
+      margin: 0 1rem 3rem;
+    }
   }
 }
