--- a/src/views/includes/sections/_features.pug
+++ b/src/views/includes/sections/_features.pug
@@ -7,48 +7,48 @@ section.features.text-center#features
 
     .row.mt-5.mb-3
       .col-12.col-sm-6.col-lg-4
-        .card.bg-transparent
-          .card-header
+        .card.card-orange
+          .card-img
             i.fas.fa-tachometer-alt.fa-5x
           .card-body
             h4.card-title Performance
             p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
 
       .col-12.col-sm-6.col-lg-4
-        .card.bg-transparent
-          .card-header
+        .card.card-grey
+          .card-img
             i.fas.fa-tools.fa-5x
           .card-body
             h4.card-title Audit
             p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
 
       .col-12.col-sm-6.col-lg-4
-        .card.bg-transparent
-          .card-header
+        .card.card-blue
+          .card-img
             i.fas.fa-medal.fa-5x
           .card-body
             h4.card-title SEO Ready
             p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
 
       .col-12.col-sm-6.col-lg-4
-        .card.bg-transparent
-          .card-header
+        .card.card-grey
+          .card-img
             i.fas.fa-heartbeat.fa-5x
           .card-body
             h4.card-title Best practices
             p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
 
       .col-12.col-sm-6.col-lg-4
-        .card.bg-transparent
-          .card-header
+        .card.card-green
+          .card-img
             i.fas.fa-universal-access.fa-5x
           .card-body
             h4.card-title Accessibility
             p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
 
       .col-12.col-sm-6.col-lg-4
-        .card.bg-transparent
-          .card-header
+        .card.card-grey
+          .card-img
             i.fas.fa-desktop.fa-5x
           .card-body
             h4.card-title Responsive
@@ -56,4 +56,4 @@ section.features.text-center#features
 
     .row
       .col-12
-        p.mb-0: a.btn.btn-outline-orange(href="info.html") Read more
+        p.mb-0: a.btn.btn-orange(href="info.html") Read more
