refactor(portfolio): change button background

--- a/src/views/includes/sections/_portfolio.pug
+++ b/src/views/includes/sections/_portfolio.pug
@@ -27,4 +27,4 @@ section.portfolio.text-center#portfolio
 
     .row
       .col-12
-        p.mb-0: a.btn.btn-outline-orange(href="portfolio.html") See our work
+        p.mb-0: a.btn.btn-orange(href="portfolio.html") See our work
