fix(hero): drop fixed background position

--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -18,15 +18,19 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: auto;
     height: 100%;
   }
 
-  // Clip text element
-  .clip-text {
-    color: $primary-color;
-    -webkit-background-clip: text; // stylelint-disable-line
-    -webkit-text-fill-color: transparent;
+  // Clip background element
+  .clip-bg {
+    background-image: url(../images/hero-unit/grass_field_dawn-portrait.jpg);
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+
+    @media (min-width: 768px) {
+      background-image: url(../images/hero-unit/grass_field_dawn.jpg);
+    }
 
     &::before,
     &::after {
@@ -45,7 +49,6 @@
       background-position: inherit;
       background-size: inherit;
       background-repeat: inherit;
-      background-attachment: inherit;
     }
 
     // Overlay
@@ -55,17 +58,11 @@
     }
   }
 
-  // Clip background element
-  .clip-bg {
-    background-image: url(../images/hero-unit/grass_field_dawn-portrait.jpg);
-    background-position: center center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-
-    @media (min-width: 768px) {
-      background-image: url(../images/hero-unit/grass_field_dawn.jpg);
-    }
+  // Clip text element
+  .clip-text {
+    background-clip: text;
+    color: $primary-color;
+    -webkit-text-fill-color: transparent;
   }
 
   // Main title
@@ -89,11 +86,14 @@
     }
   }
 
-  .rotate-text {
-    display: none;
+  // Rotate text
+  .rotate {
+    .rotate-text {
+      display: none;
 
-    @media (max-width: 575.98px) {
-      font-size: 1.5rem;
+      @media (max-width: 575.98px) {
+        font-size: 1.5rem;
+      }
     }
   }
 }
