--- a/src/views/includes/sections/_hero.pug
+++ b/src/views/includes/sections/_hero.pug
@@ -1,9 +1,9 @@
 //- includes/sections/_hero.pug
 section#hero
   .hero-unit
-    .hero-content.clip-text.clip-bg
+    .hero-content.clip-bg.clip-text
       h1.branding.mb-0 Adorade
-      #rotate
+      .rotate#rotate
         h2.mb-0.rotate-text Web Design
         h2.mb-0.rotate-text Web Development
         h2.mb-0.rotate-text Mobile Development
