--- a/src/views/includes/sections/_hero.pug
+++ b/src/views/includes/sections/_hero.pug
@@ -5,8 +5,8 @@ section#hero
       h1.branding.mb-0 Adorade
       .rotate#rotate
         h2.mb-0.rotate-text Web Design
-        h2.mb-0.rotate-text Web Development
-        h2.mb-0.rotate-text Mobile Development
-        h2.mb-0.rotate-text Web Applications
-        h2.mb-0.rotate-text Smart Solutions
+        //- h2.mb-0.rotate-text Web Development
+        //- h2.mb-0.rotate-text Mobile Development
+        //- h2.mb-0.rotate-text Web Applications
+        //- h2.mb-0.rotate-text Smart Solutions
     include ../misc/_scroll-down
