--- a/src/views/partials/_analytics.pug
+++ b/src/views/partials/_analytics.pug
@@ -8,3 +8,5 @@ if entry.inline
     gtag('js', new Date());
 
     gtag('config', 'UA-39823263-1');
+    //- Set the user ID using signed-in user_id.
+    gtag('set', {'user_id': 'Us16Er69'});
