refactor(form): add col to contact form

--- a/src/views/includes/forms/_contact-form.pug
+++ b/src/views/includes/forms/_contact-form.pug
@@ -7,7 +7,7 @@ section.contact-form.text-center#scontact-form
         h3.mb-4 Please, be so kind, don't hesitate to contact us!
 
     .row.no-gutters
-      .col-8.offset-md-2
+      .col.col-md-8.offset-md-2
         form.form-horizontal#contact-form(action="#!" netlify)
           .note
           .load
