fix(analytics): correct `user_id` config

--- a/src/views/partials/_analytics.pug
+++ b/src/views/partials/_analytics.pug
@@ -7,6 +7,7 @@ if entry.inline
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'UA-39823263-1');
-    //- Set the user ID using signed-in user_id.
-    gtag('set', {'user_id': 'Us16Er69'});
+    gtag('config', 'UA-39823263-1', {
+      //- Set the user ID using signed-in user_id.
+      'user_id': 'Us19Er69'
+    });
