--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -2,6 +2,10 @@
 // Hero Unit
 // -----------------------------------------------------------------------------
 
+.hero {
+  padding: 0;
+}
+
 .hero-unit {
   position: relative;
   display: flex;
