--- a/src/scss/components/_marks.scss
+++ b/src/scss/components/_marks.scss
@@ -1,7 +1,7 @@
 //
-// Contact
+// Marks
 // -----------------------------------------------------------------------------
 
-.contact-form {
-  background-color: $grey-700;
+.marks {
+  background-color: $grey-800;
 }
