--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -28,6 +28,7 @@
 @import "components/tech";
 @import "components/footer";
 @import "components/newsletter";
+@import "components/marks";
 @import "components/modal";
 @import "components/form";
 @import "components/contact";
