--- a/src/views/includes/forms/_modal-get-quote.pug
+++ b/src/views/includes/forms/_modal-get-quote.pug
@@ -1,5 +1,5 @@
 //- includes/forms/_modal-get-quote.pug
-// Contact modal content
+//- Contact modal content
 .modal.fade#GetQuoteModal(tabindex="-1" role="dialog" aria-labelledby="GetQuoteModalLabel" aria-hidden="true")
   .modal-dialog(role="document")
     .modal-content
