--- a/src/views/includes/sections/_hero.pug
+++ b/src/views/includes/sections/_hero.pug
@@ -1,5 +1,5 @@
 //- includes/sections/_hero.pug
-section#hero
+section.hero#hero
   .hero-unit
     .hero-content.clip-bg.clip-text
       h1.branding.mb-0 Adorade
