--- a/src/views/contact.pug
+++ b/src/views/contact.pug
@@ -9,3 +9,4 @@ prepend setting
 block header
   include modules/header/_header-contact
   include includes/forms/_contact-form
+  include includes/sections/_marks
