--- a/src/views/includes/forms/_contact-form.pug
+++ b/src/views/includes/forms/_contact-form.pug
@@ -1,14 +1,14 @@
 //- includes/forms/_contact-form.pug
-// Contact form
+//- Contact form
 section.contact-form.text-center#scontact-form
   .container
     .row
       .col-12
-        h3.mb-4 Please, be so kind, don't hesitate to contact us!
+        h3.mb-5 Please, be so kind, don't hesitate to contact us!
 
     .row.no-gutters
       .col.col-md-8.offset-md-2
-        form.form-horizontal#contact-form(action="#!" netlify)
+        form.p-4.shadow-lg#contact-form(action="#!" netlify)
           .note
           .load
 
@@ -52,5 +52,6 @@ section.contact-form.text-center#scontact-form
           //- For php script
           //- input(type="hidden" name="submitted" value="true")
 
-          button.btn.btn-info#submit(type="submit") Send
-          button.btn.btn-outline-danger#reset(type="reset") Cancel
+          .mt-5
+            button.btn.btn-info#submit(type="submit") Send
+            button.btn.btn-outline-light#reset(type="reset") Cancel
