refactor(pages): add content template

--- a/src/scss/components/_content.scss
+++ b/src/scss/components/_content.scss
@@ -9,5 +9,11 @@ section {
 }
 
 .content {
-  @include gradient-radial-circle-top(rgba($black, .3), rgba($black, .9));
+  // @include gradient-radial-circle-top(rgba($black, .3), rgba($black, .9));
+  background-color: $grey-800;
+}
+
+.picture-wrapper {
+  width: 100%;
+  height: 360px;
 }
