--- a/src/views/includes/sections/_cards.pug
+++ b/src/views/includes/sections/_cards.pug
@@ -10,7 +10,7 @@ section.cards#cards
           .card-img-overlay.card-d-flex
             h4.card-title Web Design
             p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
-            a.btn.btn-outline-orange.card-link(href="#!") Click here
+            a.btn.btn-outline-orange.card-link(href="services.html") Click here
 
       .col-12.col-sm-6.col-lg-4
         .card.card-dark
@@ -18,7 +18,7 @@ section.cards#cards
           .card-img-overlay.card-d-flex
             h4.card-title Web Dev
             p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
-            a.btn.btn-outline-orange.card-link(href="#!") Click here
+            a.btn.btn-outline-orange.card-link(href="services.html") Click here
 
       .col-12.col-sm-6.col-lg-4
         .card.card-dark
@@ -26,7 +26,7 @@ section.cards#cards
           .card-img-overlay.card-d-flex
             h4.card-title Mobile Dev
             p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
-            a.btn.btn-outline-orange.card-link(href="#!") Click here
+            a.btn.btn-outline-orange.card-link(href="services.html") Click here
 
       .col-12.col-sm-6.col-lg-4
         .card.card-dark
@@ -34,7 +34,7 @@ section.cards#cards
           .card-img-overlay.card-d-flex
             h4.card-title Web Apps
             p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
-            a.btn.btn-outline-orange.card-link(href="#!") Click here
+            a.btn.btn-outline-orange.card-link(href="services.html") Click here
 
       .col-12.col-sm-6.col-lg-4
         .card.card-dark
@@ -42,7 +42,7 @@ section.cards#cards
           .card-img-overlay.card-d-flex
             h4.card-title Smart Solutions
             p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
-            a.btn.btn-outline-orange.card-link(href="#!") Click here
+            a.btn.btn-outline-orange.card-link(href="services.html") Click here
 
       .col-12.col-sm-6.col-lg-4
         .card.card-dark
@@ -50,4 +50,4 @@ section.cards#cards
           .card-img-overlay.card-d-flex
             h4.card-title Portfolio
             p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
-            a.btn.btn-outline-orange.card-link(href="#!") Click here
+            a.btn.btn-outline-orange.card-link(href="portfolio.html") Click here
