--- a/src/views/includes/forms/_contact-form.pug
+++ b/src/views/includes/forms/_contact-form.pug
@@ -8,7 +8,7 @@ section.contact-form.text-center#scontact-form
 
     .row.no-gutters
       .col.col-md-8.offset-md-2
-        form.p-4.shadow-lg#contact-form(action="#!" netlify)
+        form.p-4.bg-gradient-dark.shadow-lg#contact-form(action="#!" netlify)
           .note
           .load
 
