perf(scripts): update yall.js

--- a/src/views/partials/_scripts.pug
+++ b/src/views/partials/_scripts.pug
@@ -17,9 +17,13 @@ block external-js
   //-   src="https://cdnjs.cloudflare.com/ajax/libs/lozad.js/1.9.0/lozad.min.js"
   //-   integrity="sha256-50cmb3K6Zka/WMfXLFzqyo5+P+ue2JdsyEmSEsU58s4="
   //-   crossorigin="anonymous")
+  //- script(defer
+  //-   src="https://cdn.jsdelivr.net/npm/yall-js@3.1.2/dist/yall.min.js"
+  //-   integrity="sha256-5tAElkTBynU5KcrjtDLz/qwchpESP1xqrjYJ+fg0QLM="
+  //-   crossorigin="anonymous")
   script(defer
-    src="https://cdn.jsdelivr.net/npm/yall-js@3.1.2/dist/yall.min.js"
-    integrity="sha256-5tAElkTBynU5KcrjtDLz/qwchpESP1xqrjYJ+fg0QLM="
+    src="https://cdn.jsdelivr.net/npm/yall-js@3.1.4/dist/yall.min.js"
+    integrity="sha256-8CFVpfyZvd+kMYwaX0F87ULmsvKfhlagLyC6OsudeDA="
     crossorigin="anonymous")
 
 block custom-js
