--- a/src/views/includes/sections/_carousel.pug
+++ b/src/views/includes/sections/_carousel.pug
@@ -1,14 +1,14 @@
-//- includes/sections/_portfolio.pug
-include ../../mixins/_carousel-portfolio
+//- includes/sections/_carousel.pug
+include ../../mixins/_portfolio
 
-section.portfolio.text-center#portfolio
+section.carousel-portfolio.text-center#carousel-portfolio
   .container
     .row
-      .col-12
+      .col
         h2.mb-0 Our work
 
     .row.mb-5
-      .col-12
+      .col
         .carousel.slide.carousel-fade#carouselPortfolio(data-ride="carousel")
           .carousel-indicators
             li.active(data-target="#carouselPortfolio" data-slide-to="0")
@@ -16,9 +16,9 @@ section.portfolio.text-center#portfolio
 
           .carousel-inner
             .carousel-item.active
-              +portPicture("webmagia", "WebMagia")
+              +carouselPicture("webmagia", "WebMagia")
             .carousel-item
-              +portPicture("unikorn", "UniKorn")
+              +carouselPicture("unikorn", "UniKorn")
 
           a.carousel-control-prev(href="#carouselPortfolio" role="button" data-slide="prev" aria-label="Previous")
             span.carousel-control-prev-icon(aria-hidden="true")
@@ -26,5 +26,5 @@ section.portfolio.text-center#portfolio
             span.carousel-control-next-icon(aria-hidden="true")
 
     .row
-      .col-12
+      .col
         p.mb-0: a.btn.btn-orange(href="portfolio.html") See our work
