--- a/src/views/info.pug
+++ b/src/views/info.pug
@@ -8,4 +8,4 @@ prepend setting
 
 block header
   include modules/header/_header-info
-  include includes/sections/_content
+  include includes/pages/_info
