--- a/src/views/services.pug
+++ b/src/views/services.pug
@@ -1,4 +1,4 @@
-//- story.pug
+//- services.pug
 extends layout/_base
 
 prepend setting
@@ -8,4 +8,4 @@ prepend setting
 
 block header
   include modules/header/_header-services
-  include includes/sections/_content
+  include includes/pages/_services
