--- a/src/scss/pages/_portfolio.scss
+++ b/src/scss/pages/_portfolio.scss
@@ -6,7 +6,14 @@
   background-color: $grey-900;
 
   .portfolio-picture {
+    transition: filter .5s ease-in-out;
+    filter: grayscale(90%) blur(10px);
+
     // You should use a 16:9 image ratio, such as 1280 x 720 px.
     @include portfolio-fluid-aspect(16 9, ".portfolio-img");
+  }
+
+  .fade-in {
+    filter: none;
   }
 }
