refactor(page): update portfolio page

--- a/src/views/includes/pages/_portfolio.pug
+++ b/src/views/includes/pages/_portfolio.pug
@@ -8,10 +8,15 @@ section.portfolio#portfolio-1
         +portfolioPicture("unikorn", "UniKorn")
       .col-12.col-md-6
         h3.my-4.mt-md-0.text-center.text-md-left UniKorn
-        p.mb-0.
-          Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
-          Consec tetur adipiscing elit mauris solicitud, lorem ipsum dolor sit amet.
-          Dolor sit amet, consec tetur adipiscing elit mauris solicitud lorem ipsum.
+        p.mb-0 Frontend framework for designing websites and web applications.
+        p.mb-4.font-weight-bold #node #yarn #git #gulp #scss #es6 #pug.
+        .buttons-wrapper
+          a.btn.btn-info.mr-2(href="#")
+            i.fas.fa-external-link-alt.mr-2
+            span.font-weight-bold Online
+          a.btn.btn-light(href="#")
+            i.fab.fa-github.mr-2
+            span.font-weight-bold GitHub
 
 section.portfolio#portfolio-2
   .container
@@ -20,10 +25,15 @@ section.portfolio#portfolio-2
         +portfolioPicture("respo", "Respo")
       .col-12.col-md-6
         h3.my-4.mt-md-0.text-center.text-md-left Respo
-        p.mb-0.
-          Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
-          Consec tetur adipiscing elit mauris solicitud, lorem ipsum dolor sit amet.
-          Dolor sit amet, consec tetur adipiscing elit mauris solicitud lorem ipsum.
+        p.mb-0 Responsive design check tool, see how websites looks on different devices.
+        p.mb-4.font-weight-bold #devices #take #screenshots #photo.
+        .buttons-wrapper
+          a.btn.btn-info.mr-2(href="https://res.adorade.ro" target="_blank")
+            i.fas.fa-external-link-alt.mr-2
+            span.font-weight-bold Online
+          a.btn.btn-light(href="https://github.com/adorade/respo" target="_blank")
+            i.fab.fa-github.mr-2
+            span.font-weight-bold GitHub
 
 section.portfolio#portfolio-3
   .container
@@ -32,10 +42,16 @@ section.portfolio#portfolio-3
         +portfolioPicture("webmagia", "WebMagia")
       .col-12.col-md-6
         h3.my-4.mt-md-0.text-center.text-md-left WebMagia
-        p.mb-0.
-          Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
-          Consec tetur adipiscing elit mauris solicitud, lorem ipsum dolor sit amet.
-          Dolor sit amet, consec tetur adipiscing elit mauris solicitud lorem ipsum.
+        p.mb-0 High Quality WordPress Premium Templates.
+        p.mb-4.font-weight-bold #wordpress #themes #plugins #cms.
+        .buttons-wrapper
+          a.btn.btn-info.mr-2(href="#")
+            i.fas.fa-external-link-alt.mr-2
+            span.font-weight-bold Online
+          //- a.btn.btn-light(href="#")
+          //-   i.fab.fa-github.mr-2
+          //-   span.font-weight-bold GitHub
+          span.font-weight-bold Coming soon!
 
 section.portfolio#portfolio-4
   .container
@@ -44,7 +60,12 @@ section.portfolio#portfolio-4
         +portfolioPicture("timero", "Timero")
       .col-12.col-md-6
         h3.my-4.mt-md-0.text-center.text-md-left Timero
-        p.mb-0.
-          Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
-          Consec tetur adipiscing elit mauris solicitud, lorem ipsum dolor sit amet.
-          Dolor sit amet, consec tetur adipiscing elit mauris solicitud lorem ipsum.
+        p.mb-0 A fresh way to save your time, without any distraction.
+        p.mb-4.font-weight-bold #time #tasks #get #done.
+        .buttons-wrapper
+          a.btn.btn-info.mr-2(href="https://timero.adorade.ro" target="_blank")
+            i.fas.fa-external-link-alt.mr-2
+            span.font-weight-bold Online
+          a.btn.btn-light(href="https://github.com/adorade/timero" target="_blank")
+            i.fab.fa-github.mr-2
+            span.font-weight-bold GitHub
