refactor(pages): update pages layout

--- a/src/views/includes/pages/_info.pug
+++ b/src/views/includes/pages/_info.pug
@@ -1,55 +1,59 @@
 //- includes/pages/_info.pug
-section.content#content
+section.info#info-1
   .container
-    .row
-      .col
-        h2.mb-5.text-center Hi, there! I'm a test heading!
-
-    .row.align-items-center.mb-5
-      .col-12.col-md-6.order-md-1
-        .picture-wrapper.bg-gradient-dark.shadow-lg
-      .col-12.col-md-6
-        h3.mb-4 Test heading
-        p.mb-0.
-          Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
-          Consec tetur adipiscing elit mauris solicitud, lorem ipsum dolor sit amet.
-          Dolor sit amet, consec tetur adipiscing elit mauris solicitud lorem ipsum.
-
-    .row.align-items-center.mb-5
-      .col-12.col-md-6
-        .picture-wrapper.bg-gradient-dark.shadow-lg
-      .col-12.col-md-6
-        h3.mb-4 Test heading
-        p.mb-0.
-          Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
-          Consec tetur adipiscing elit mauris solicitud, lorem ipsum dolor sit amet.
-          Dolor sit amet, consec tetur adipiscing elit mauris solicitud lorem ipsum.
-
-    .row.align-items-center.mb-5
-      .col-12.col-md-6.order-md-1
-        .picture-wrapper.bg-gradient-dark.shadow-lg
-      .col-12.col-md-6
-        h3.mb-4 Test heading
-        p.mb-0.
-          Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
-          Consec tetur adipiscing elit mauris solicitud, lorem ipsum dolor sit amet.
-          Dolor sit amet, consec tetur adipiscing elit mauris solicitud lorem ipsum.
-
-    .row.align-items-center.mb-5
-      .col-12.col-md-6
-        .picture-wrapper.bg-gradient-dark.shadow-lg
-      .col-12.col-md-6
-        h3.mb-4 Test heading
-        p.mb-0.
-          Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
-          Consec tetur adipiscing elit mauris solicitud, lorem ipsum dolor sit amet.
-          Dolor sit amet, consec tetur adipiscing elit mauris solicitud lorem ipsum.
-
     .row.align-items-center
       .col-12.col-md-6.order-md-1
-        .picture-wrapper.bg-gradient-dark.shadow-lg
+        .picture-wrapper.shadow-lg
       .col-12.col-md-6
-        h3.mb-4 Test heading
+        h3.my-4.mt-md-0.text-center.text-md-left Test heading
+        p.mb-0.
+          Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
+          Consec tetur adipiscing elit mauris solicitud, lorem ipsum dolor sit amet.
+          Dolor sit amet, consec tetur adipiscing elit mauris solicitud lorem ipsum.
+
+section.info#info-2
+  .container
+    .row.align-items-center
+      .col-12.col-md-6
+        .picture-wrapper.shadow-lg
+      .col-12.col-md-6
+        h3.my-4.mt-md-0.text-center.text-md-left Test heading
+        p.mb-0.
+          Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
+          Consec tetur adipiscing elit mauris solicitud, lorem ipsum dolor sit amet.
+          Dolor sit amet, consec tetur adipiscing elit mauris solicitud lorem ipsum.
+
+section.info#info-3
+  .container
+    .row.align-items-center
+      .col-12.col-md-6.order-md-1
+        .picture-wrapper.shadow-lg
+      .col-12.col-md-6
+        h3.my-4.mt-md-0.text-center.text-md-left Test heading
+        p.mb-0.
+          Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
+          Consec tetur adipiscing elit mauris solicitud, lorem ipsum dolor sit amet.
+          Dolor sit amet, consec tetur adipiscing elit mauris solicitud lorem ipsum.
+
+section.info#info-4
+  .container
+    .row.align-items-center
+      .col-12.col-md-6
+        .picture-wrapper.shadow-lg
+      .col-12.col-md-6
+        h3.my-4.mt-md-0.text-center.text-md-left Test heading
+        p.mb-0.
+          Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
+          Consec tetur adipiscing elit mauris solicitud, lorem ipsum dolor sit amet.
+          Dolor sit amet, consec tetur adipiscing elit mauris solicitud lorem ipsum.
+
+section.info#info-5
+  .container
+    .row.align-items-center
+      .col-12.col-md-6.order-md-1
+        .picture-wrapper.shadow-lg
+      .col-12.col-md-6
+        h3.my-4.mt-md-0.text-center.text-md-left Test heading
         p.mb-0.
           Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
           Consec tetur adipiscing elit mauris solicitud, lorem ipsum dolor sit amet.
