--- a/src/views/contact.pug
+++ b/src/views/contact.pug
@@ -8,5 +8,7 @@ prepend setting
 
 block header
   include modules/header/_header-contact
+
+prepend content
   include includes/forms/_contact-form
   include includes/sections/_marks
